# bitacora-semantica

./: .gitignore  AGENTS.md  ONTOLOGY.md  RESUMEN.md  TUI.md  UI_PLANNING.md  context.jsonld  logdiario_test_out.json  paper.md  prompt.txt  schema.json
.mulch/: AGENTS.md  mulch.config.yaml
.mulch/expertise/: kiosco.jsonl  operaciones.jsonl
.pi/agent-sessions/: builder.json  documenter.json  planner.json  red-team.json  reviewer.json  scout.json
.pi/disable-extensions/log_diario/: cli.ts  index.ts  separators.ts
.pi/disable-extensions/log_diario_wizard/: index.ts  wizard_impl.ts
.pi/extensions/log_diario/: helpers.ts  index.ts  parser.ts  prompt.ts  wizard.ts
.pi/extensions/log_diario_wizard/: index.ts  wizard_impl.ts
.pi/skills/experto-ontologias/: SKILL.md
.pi/skills/knowledge-cli/: SKILL.md
.pi/skills/log-diario-separation/: SKILL.md
.pi/skills/log_diario-separation/: SKILL.md
.pi/skills/mulch-skill/: SKILL.md
docs/ontology/: context.jsonld
knowledge-cli/: Cargo.toml
knowledge-cli/knowledge/: index.json
knowledge-cli/knowledge/payments/: urn_log_payments_1101b951-c646-4ab6-8ac7-51c109e3224b.jsonld  urn_log_payments_92a692b1-4c7e-4021-af11-22c646642141.jsonld
knowledge-cli/src/: cli.rs  extended_help.rs  main.rs  models.rs  storage.rs  validation.rs
knowledge-cli/tests/: cli_integration_test.rs
tools/: convert_logs_to_iso.py  run_bitacora_test.py  run_log_diario_test.py
ui/src/: inference.rs  main.rs  state.rs  ui.rs
ui/tests/: pi_rpc_ping_test.rs
ui/tests/fixtures/: inference_prompt.jsonl
